samples/_failures_safe/1761368218_ce5254_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09ab4a6d.c: In function ‘main’:
./samples/SAFE/__tmp_09ab4a6d.c:140:25: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  140 |         destroy_matrix(&mat
      |                         ^~~
      |                         mat2
./samples/SAFE/__tmp_09ab4a6d.c:140:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_09ab4a6d.c:140:28: error: expected ‘)’ at end of input
  140 |         destroy_matrix(&mat
      |                       ~    ^
      |                            )
./samples/SAFE/__tmp_09ab4a6d.c:140:9: error: expected declaration or statement at end of input
  140 |         destroy_matrix(&mat
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_09ab4a6d.c:140:9: error: expected declaration or statement at end of input
